--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url=http://www.diegocamargo.xyz/blog">
+        <meta http-equiv="refresh" content="1; url=http://www.diegocamargo.xyz/">
         <script type="text/javascript">
-            window.location.href = "http://www.diegocamargo.xyz/blog"
+            window.location.href = "http://www.diegocamargo.xyz/"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='http://www.diegocamargo.xyz/blog'>link to the blog</a>.
+        If you are not redirected automatically, follow this <a href='http://www.diegocamargo.xyz/'>link to the blog</a>.
     </body>
 </html>
